Content settings added author, fixed category url, and layout problems KMS-97

--- a/src/app/sass/application.css.scss
+++ b/src/app/sass/application.css.scss
@@ -279,6 +279,10 @@ li:hover {
 
 ul.content-settings {
   li {
+    .field-label {
+      margin-right : 10px;
+    }
+
     a {
       cursor     : pointer;
       color      : black;
